# us_studying_project

./: .gitignore  0222.py  02222.py  02223.py  QS_World_University_Rankings_2025__Top_150_.csv  README.md  failed_schools.json  mit.py  mit_Housing_reviews.json  mit_reviews.json  mit_reviews_by_category.json  mit_student_life_reviews.json  my_rag_project1-1.sql  pyproject.toml
review/: calculate_page.py  mit_final.py  mit_housing.py  mit_overall.py  mit_review2.py  mit_student_life.py  reviews.py  reviews2.py  school_id copy.json  school_id.json  school_id.py  school_id2.py  tmp.txt  yale_final.py  yale_housing.py  yale_overall.py
reviews/success/: Boston_University_reviews.json  Brown_University_reviews.json  California_Institute_of_Technology_reviews.json  Carnegie_Mellon_University_reviews.json  Columbia_University_reviews.json  Dartmouth_College_reviews.json  Duke_University_reviews.json  Georgetown_University_reviews.json  Harvard_University_reviews.json  Massachusetts_Institute_of_Technology_reviews.json  Princeton_University_reviews.json  Rice_University_reviews.json  Stanford_University_reviews.json  Tulane_University_reviews.json  University_of_California_-_Berkeley_reviews.json  University_of_Chicago_reviews.json  University_of_Florida_reviews.json  University_of_Notre_Dame_reviews.json  University_of_Pennsylvania_reviews.json  Vanderbilt_University_reviews.json  Washington_University_in_St._Louis_reviews.json  Yale_University_reviews.json
sql/: VISA_TABLE.sql  city.sql  teachimg_assitant.sql
